syntax = "proto3";
package llm;

service LLMService {
  rpc GenerateExplanation(ExplanationRequest) returns (ExplanationResponse);
}

message ExplanationRequest {
  string route = 1;
  map<string, string> user_preferences = 2;
}

message ExplanationResponse {
  string explanation = 1;
}
